# OmniSVG-Text-to-SVG-Implementation

./: README.md  pyproject.toml  requirements.txt  run_api.py  setup.cfg
api/: app.py
api/templates/: index.html
notebooks/: prepare_training_data.ipynb  using_omnisvg.ipynb
omnisvg/: __init__.py  config.py  dataset.py  main.py  tokenizer.py  utils.py  visualization.py
omnisvg/modeling/: __init__.py  predict.py  train.py
omnisvg/notebooks/: svg_generation_example.ipynb
src/: config.py  data_processing.py  inference.py  model.py  train.py  utils.py
tests/: test_data_processing.py
